# secha-ingestion

./: .env.template  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: open-questions.md
src/secha_ingestion/: __init__.py  cli.py  config.py  logging.py
src/secha_ingestion/connectors/: __init__.py  mx_electrix.py
src/secha_ingestion/core/: __init__.py  connector.py  envelope.py  models.py  runner.py  sink.py
tests/: conftest.py  test_sink.py
tests/connectors/: test_mx_electrix.py
