[project]
name = "secha-ingestion"
version = "0.1.0"
description = "Vendor-agnostic raw ingestion layer for the SECHA EV-charging data interoperability framework."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Anas Uddin" }]
license = { text = "Proprietary - SECHA project (confirm license with supervisor)" }
dependencies = [
    "httpx>=0.27",
    "fsspec>=2024.6",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "structlog>=24.1",
]

[project.optional-dependencies]
s3 = ["s3fs>=2024.6"]
azure = ["adlfs>=2024.4"]

[project.scripts]
secha-ingest = "secha_ingestion.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/secha_ingestion"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["fsspec", "fsspec.*", "structlog", "structlog.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
